; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_vmenus.c_rotate_nibble.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_vmenus.c_rotate_nibble.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @rotate_nibble to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rotate_nibble(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp sgt i32 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = ashr i32 %11, 7
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %4, align 4
  %14 = shl i32 %13, 1
  %15 = load i32, i32* %6, align 4
  %16 = or i32 %14, %15
  store i32 %16, i32* %3, align 4
  br label %25

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = and i32 %18, 1
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %4, align 4
  %21 = ashr i32 %20, 1
  %22 = load i32, i32* %7, align 4
  %23 = shl i32 %22, 7
  %24 = or i32 %21, %23
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %17, %10
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
